# emacs

./: .0-Elisp-IDE.org  .0-TODO  .emacs.common.el  .emacs.common.org  .emacs.org  .emacs.spacemacs  .emacs.vanilla  .emacs.vanilla.org  .gitignore  .haskell-minimal-init.el  .nix.emacs  .nix.emacs-derivation  .nix.emacs-derivation-big  .nix.org  .spacemacs.emacs  .vanilla.emacs  0-README.org  NIX.org  README  README.org  SPACE-DELETE  TODO  emacs-pdf-README  emc-widget-dynamic-group.el  essh.el  hc-agda.el  hc-ai.el  hc-alignment.el  hc-alter-font-size.el  hc-appearance.el  hc-batch-cmds.el  hc-bookmark-plus.el  hc-bookmarks.el  hc-browser-history.el  hc-buffer-control.el  hc-calendar.el  hc-codex.el  hc-company.el  hc-compilation.el  hc-coq-proof-general.el  (+174 more)
.haskell.emacs.d/: .gitignore  init.el
NOT-USED-ANYMORE/: .emacs-lisp-scheme-clojure.el  .emacs.mail-list  .emacs.org-example  .emacs.todo  .javaModeAlist  emacs-pdf.el  hc-chat-gpt.el  hc-completion.el  hc-coq-proof-general.el  hc-haskell-hie.el  hc-haskell-intero.el  hc-haskell-victor-miraldo.el  hc-kubernetes.el  hc-org-mobile.el  hc-package-cleanup.el  hc-package-mgmt.el  hc-package-migrate.el  hc-package-migrate.org  hc-racket-geiser.el  hc-racket-mode.el  hcAddDat.el  hcAnimate.el  hcBugTraq.el  hcCheckMss.el  hcDeprecated.el  hcDiffAlists.el  hcGnusHelp.el  hcJde-2.1.5.el  hcJde.el  hcJdeRip-2.1.5.el  hcJdeRipCommon.el  hcListFilesFromMss.el  hcMoveFiles.el  hcRipSecurityAudit.el  hcScc.el  (+9 more)
NOT-USED-ANYMORE/hc-haskell-fun/: HaskellEmacs.cabal  default.nix
NOT-USED-ANYMORE/hc-haskell-fun/Data/: AttoLisp.hs
(+19 files in other folders)
