
name:                HaskellEmacs
version:             0.0.0
build-type:          Simple
cabal-version:       >=1.10
license:             GPL-2
executable HaskellEmacs
  main-is:             HaskellEmacs.hs
  other-modules:       Data.AttoLisp
                     , Foreign.Emacs.Internal
                     , Matrix
  default-language:    Haskell2010
  ghc-options:         -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parallel
                     , text
                     , utf8-string
                     , bytestring
                     , mtl
                     , deepseq
                     , transformers
                     , haskell-src-exts == 1.17.1
                     , containers
                     , attoparsec
                     -----
                     , attoparsec
                     , blaze-builder
                     , blaze-textual
                     , bytestring
                     , containers
                     , deepseq
                     , text
